samples/_failures_safe/1761596741_e43229_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc322aa3.c: In function ‘main’:
./samples/SAFE/__tmp_bc322aa3.c:137:12: error: missing terminating " character
  137 |     printf("Format: YYYY-MM-DD HH:
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bc322aa3.c:137:5: error: expected expression at end of input
  137 |     printf("Format: YYYY-MM-DD HH:
      |     ^~~~~~
./samples/SAFE/__tmp_bc322aa3.c:137:5: error: expected declaration or statement at end of input
